--- a/spring-cloud-config/lab-4-adjective/src/main/resources/application.yml
+++ b/spring-cloud-config/lab-4-adjective/src/main/resources/application.yml
@@ -1,7 +1,7 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8010/eureka
+spring:
+  cloud:
+    config:
+      uri: http://localhost:8001
 words: reasonable,leaky,suspicious,ordinary,unlikely
 server:
   port: ${PORT:${SERVER_PORT:0}}
